--- a/localisation/v2_30c.csv
+++ b/localisation/v2_30c.csv
@@ -321,9 +321,9 @@ EVTDESC_WoL_4161_gamer;╦Зр╩х╨м╛ж╬Ё╘рШ©Я╩╤й╣тзл╚╟Так. дЦ╨эЮк, ╬Ь╤тЮк, ╤ЬуБрБн╤вей
 EVTDESC_WoL_4161_non_gamer;╦Зр╩х╨цНхкцгЁ╘рШ©Я╩╤л╚╟Так║ё╣╠╬ф╠╜╠╩ты╢н╪сбЗй╠ё╛[From.GetTitledFirstName]дцЁЖакр╩©ИфФ╧ж╣д╟Евсё╛╦╫╢Ьр╩п╘╬╚цю╣дп║фЕвсё╛╫Ииэк╣уБйгр╩жжу╫бтсно╥║ё[From.GetSheHe]╠ёж╓к╣р╩╠ъ╨х╬фр╩╠ъмФуБ╦Ж╩Айг╥гЁё╡╩╢М╣длЕяИ║ё;;;;;;;;;;X
 EVTOPTA_WoL_4161;нрцг╤дг╝мФё║;;;;;;;;;;X
 EVTOPTB_WoL_4161;нрцг╤диохысЧмФё║;;;;;;;;;;X
-EVTDESC_WoL_4162_money_i_suggest;дЦ╤т[From.GetTitledFirstName]лАрИмФдЦдцЁЖю╢╣дфЕел╨мфЕвсё╛©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ётз╤дг╝╣дгИ©Жобё╛[From.GetSheHeCap]м╛рБак║ё;;;;;;;;;;X
-EVTDESC_WoL_4162_not_money_i_suggest;дЦ╤т[From.GetTitledFirstName]лАрИмФдЦдцЁЖю╢╣дфЕел╨мфЕвсё╛©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ё[From.GetSheHeCap]м╛рБакё╛╣╚йг╪АЁждЦцгж╩н╙акхысЧ╤ЬмФ║ё;;;;;;;;;;X
-EVTDESC_WoL_4162_money_they_suggest;[From.GetTitledFirstName]дцЁЖакфЕел╨мфЕвсоРдЦлАрИк╣ю╢мФ╪╦╬ж©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ё[From.GetSheHeCap]╩╧╪АЁждЦцг╣ц╤дг╝.;;;;;;;;;;X
+EVTDESC_WoL_4162_money_i_suggest;дЦ╤т[From.GetTitledFirstName]лАрИмФдЦдцЁЖю╢╣дфЕел╨мфЕвсё╛©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ётз╤дг╝╣дгИ©Жобё╛[From.GetSheHe]м╛рБак║ё;;;;;;;;;;X
+EVTDESC_WoL_4162_not_money_i_suggest;дЦ╤т[From.GetTitledFirstName]лАрИмФдЦдцЁЖю╢╣дфЕел╨мфЕвсё╛©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ё[From.GetSheHe]м╛рБакё╛╣╚йг╪АЁждЦцгж╩н╙акхысЧ╤ЬмФ║ё;;;;;;;;;;X
+EVTDESC_WoL_4162_money_they_suggest;[From.GetTitledFirstName]дцЁЖакфЕел╨мфЕвсоРдЦлАрИк╣ю╢мФ╪╦╬ж©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ё[From.GetSheHe]╩╧╪АЁждЦцг╣ц╤дг╝.;;;;;;;;;;X
 EVTDESC_WoL_4162_not_money_they_suggest;[From.GetTitledFirstName]дцЁЖакфЕел╨мфЕвсоРдЦлАрИк╣ю╢мФ╪╦╬ж©╢©╢к╜тзу╫бтио╦Эй╓р╩ЁО║ёдЦцг╫╚н╙хысЧ╤ЬмФ║ё;;;;;;;;;;X
 EVTOPTA_WoL_4162;╨э╨цё╛©╙й╪╟и!;;;;;;;;;;X
 EVTDESC_WoL_4163_win;дЦцгмФак╪╦╦Жп║й╠ё╛пртк╣дЁ╞к╝спугспбДё╛дЦйтм╪тз╡╩╠╘б╤втиМ╥юсЫффую╣дм╛й╠╧╔╩ВдЦ╣д╤тйж║ёжусзё╛дЦур╣╫ак╤т╥╫р╩╦ЖжбцЭ╣дффуюё╛вЖак╪╦╦Ж╦╩сп╪╓гИ╤Ьсжгжбтпт╣дрф╤╞с╝╣цаксно╥║ё;;;;;;;;;;X
