--- a/localisation/v2_30d.csv
+++ b/localisation/v2_30d.csv
@@ -14,7 +14,7 @@ EVTOPTC_WOL_2100;╡╩...нр╬У╣цнрцгс╕╦цх╔╢Рл╫фДкШхк╣др╩п╘оШо╒.;;;;;;;;;;X
 EVTDESC_WOL_2065;╨э╡╩пр,нрц╩дэтз[FromFromFrom.GetTitledFirstName]иМио╦Ц╣╫й╡ц╢спсц╣доШо╒.р╡пМнр╦ц╧ьв╒обфДкШ╣ь╥╫?;;;;;;;;;;X
 EVTOPTA_WOL_2065;йг╣д,уБц╩спрБрЕ.;;;;;;;;;;X
 EVTOPTB_WOL_2065;╡╩,нр©о╤╗ [FromFromFrom.GetSubjectPronoun]с╕╤тй╡ц╢йбгИ╦╨тП...;;;;;;;;;;X
-EVTDESC38313;иЗ╩Н╣дя╧а╕рях╩╫╔╫╔мйх╔,нрожтз╡╩ты╖Y╫Туе╡╩╟╡╖!!;;;;;;;;;;X
+EVTDESC38313;иЗ╩Н╣дя╧а╕рях╩╫╔╫╔мйх╔,нрожтз╡╩ты╫Туе╡╩╟╡!;;;;;;;;;;X
 EVTDESC38314;╫ЯлЛнрртн╒п╕ю╢с╜╫спбр╩лЛ╣д╣╫ю╢,нр╡╩ты╬зи╔оШЁа!;;;;;;;;;;X
 PICK_FOCUS_DESC;тз╖Y$YEARS$╖!дЙй╠╪ДдздЦ╡╩дэты╢н╠Д╦Эжьпдё║;;;;;;;;;;X
 CANNOT_CANCEL;╖Rнч╥╗╠╩х║оШ║ё╖!;;;;;;;;;;X
